[package]
name = "evilgram"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
mongodb = "3.3"
teloxide = { version = "0.17", features = ["macros"]}
anyhow = "1"
futures = "0.3"
regex = "1.12"
